--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "wasabigeek",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A blog about my foray into tech and the world of indie hacking",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Nick <nick@wasabigeek.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
