--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
 
       - name: Build
         run: yarn build
+        env:
+          GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_ANALYTICS_ID }}
+
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
