--- a/obsidian/Gemfile
+++ b/obsidian/Gemfile
@@ -5,3 +5,9 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 gem "activesupport", "~> 6.1"
+gem "faraday", "~> 2.2"
+
+group :development, :test do
+  gem "byebug", "~> 11.1"
+  gem "minitest", "~> 5.15"
+end
