--- a/package.json
+++ b/package.json
@@ -13,37 +13,39 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gatsby": "^2.24.47",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-feed": "^2.5.11",
+    "false": "^0.0.4",
+    "gatsby": "^4.9.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.4.23",
-    "gatsby-plugin-offline": "^3.2.23",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.27",
-    "gatsby-plugin-twitter": "^3.0.0",
-    "gatsby-plugin-typography": "^2.5.10",
-    "gatsby-remark-copy-linked-files": "^2.3.12",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-remark-prismjs": "^3.5.10",
-    "gatsby-remark-responsive-iframe": "^2.4.12",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-remark": "^2.8.28",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-twitter": "^4.9.0",
+    "gatsby-plugin-typography": "^4.9.0",
+    "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-images": "^6.9.0",
+    "gatsby-remark-prismjs": "^6.9.0",
+    "gatsby-remark-responsive-iframe": "^5.9.0",
+    "gatsby-remark-smartypants": "^5.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-remark": "^5.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
+    "sharp": "^0.30.2",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13",
     "typography": "^0.16.19",
     "typography-theme-doelger": "^0.16.19"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.5.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
