--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "false": "^0.0.4",
     "gatsby": "^4.9.2",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-manifest": "^4.9.0",
     "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
