--- a/package.json
+++ b/package.json
@@ -44,8 +44,13 @@
     "typography-theme-doelger": "^0.16.19"
   },
   "devDependencies": {
+    "babel-jest": "^27.5.1",
+    "babel-preset-gatsby": "^2.10.1",
     "gh-pages": "^3.1.0",
-    "prettier": "2.5.1"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "prettier": "2.5.1",
+    "react-test-renderer": "^17.0.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -64,7 +69,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "test": "jest",
     "deploy": "gatsby build && gh-pages -d public -b gh-pages"
   }
 }
