--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-plugin-twitter": "^4.9.0",
     "gatsby-plugin-typography": "^4.9.0",
+    "gatsby-remark-autolink-headers": "^5.10.2",
     "gatsby-remark-copy-linked-files": "^5.9.0",
     "gatsby-remark-images": "^6.9.0",
     "gatsby-remark-prismjs": "^6.9.0",
