--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-sitemap": "^5.18.1",
     "gatsby-plugin-twitter": "^4.9.0",
     "gatsby-plugin-typography": "^4.9.0",
     "gatsby-remark-autolink-headers": "^5.10.2",
