--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "false": "^0.0.4",
     "gatsby": "^4.9.2",
+    "gatsby-plugin-canonical-urls": "^4.23.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^2.9.0",
